# trading-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tradedan.code-workspace
configs/: 1h_simple.yaml  default.yaml  execution.yaml  regime_experiment.yaml  strategy_long.yaml  strategy_pro_template.yaml  strategy_rsi_cross.yaml  train_recommended.yaml
data/: .gitkeep
data/signal_logs/: signals.jsonl
docs/: GUIA_APRENDIZAJE.md  MARCO_ESTRATEGIA_PROFESIONAL.md
lessons/01_python_basico/: README.md  ejercicio.py
lessons/02_datos_y_pandas/: README.md  ejercicio.py  ejercicio2.py  precios con rango 2.csv  precios_con_rango.csv  precios_ejemplo.csv
lessons/03_datos_mercado/: README.md  backtest_ejemplo.py  ejercicio.py
lessons/04_indicadores/: README.md  ejercicio.py
lessons/05_senales_backtest/: README.md  ejercicio.py
scripts/: com.tradedan.deploy.plist  com.trading-ai.deploy.plist  deploy.sh  ejemplo_src.py  plot_results.py  plot_rsi_ema_results.py  run_experiment.py  run_live.py  run_live_multi.py  strategy_long_rules.py  strategy_rsi_cross_4h.py  strategy_rsi_ema.py
src/: README.md  __init__.py
src/agents/: __init__.py  backtest_agent.py  data_agent.py  execution_agent.py  feature_agent.py  label_agent.py  model_agent.py  orchestrator.py  regime_agent.py
src/data/: __init__.py  download.py
src/indicators/: __init__.py  ma.py  momentum.py  touch_support_resistance.py
src/notifications/: email.py  pushover.py
src/web/: app.py  bot_runner.py
src/web/static/: index.html
tests/: test_regime_agent.py
